bin/feature.y.output
Terminals unused in grammar

   TOK_COMMENT
   TOK_ERROR
   TOK_OUT_OF_MEMORY


Grammar

    0 $accept: document "end-of-file"

    1 document: declarations

    2 declarations: %empty
    3             | declarations declaration

    4 declaration: feature_declaration
    5            | grammar_declaration
    6            | case_declaration
    7            | import_declaration
    8            | file_skeleton_declaration
    9            | test_skeleton_declaration
   10            | step_skeleton_declaration
   11            | define_skeleton_declaration
   12            | background_declaration
   13            | scenario_outline_declaration
   14            | examples_declaration
   15            | scenario_declaration

   16 feature_declaration: "Feature" ":" TOK_IDENTIFIER

   17 grammar_declaration: "%grammar" "=" "ECMAScript"
   18                    | "%grammar" "=" "basic"
   19                    | "%grammar" "=" "extended"
   20                    | "%grammar" "=" "awk"
   21                    | "%grammar" "=" "grep"
   22                    | "%grammar" "=" "egrep"

   23 case_declaration: "%case" "=" "sensitive"
   24                 | "%case" "=" "insensitive"

   25 import_declaration: "%import" TOK_IMPORT_NAME

   26 file_skeleton_declaration: "%file" TOK_CPP

   27 test_skeleton_declaration: "%test" TOK_CPP

   28 step_skeleton_declaration: TOK_PATTERN TOK_CPP

   29 define_skeleton_declaration: "%define" TOK_IDENTIFIER TOK_CPP

   30 background_declaration: "Background" ":" steps

   31 scenario_outline_declaration: "Scenario" "Outline" ":" TOK_IDENTIFIER steps

   32 examples_declaration: "Examples" ":" table

   33 scenario_declaration: "Scenario" ":" TOK_IDENTIFIER steps

   34 steps: step
   35      | steps step

   36 step: basic_step
   37     | basic_step table
   38     | basic_step TOK_MTEXT

   39 basic_step: TOK_GIVEN
   40           | TOK_WHEN
   41           | TOK_THEN

   42 table: row
   43      | table row

   44 row: cells TOK_ROW_END

   45 cells: TOK_CELL
   46      | cells TOK_CELL


Terminals, with rules where they appear

"end-of-file" (0) 0
error (256)
"Feature" (258) 16
"%file" (259) 26
"%test" (260) 27
"%define" (261) 29
"Background" (262) 30
"Scenario" (263) 31 33
"Outline" (264) 31
"Examples" (265) 32
"%grammar" (266) 17 18 19 20 21 22
"%case" (267) 23 24
"%import" (268) 25
"ECMAScript" (269) 17
"basic" (270) 18
"extended" (271) 19
"awk" (272) 20
"grep" (273) 21
"egrep" (274) 22
"sensitive" (275) 23
"insensitive" (276) 24
TOK_IDENTIFIER <str> (277) 16 29 31 33
TOK_CPP <str> (278) 26 27 28 29
TOK_PATTERN <str> (279) 28
TOK_GIVEN <str> (280) 39
TOK_WHEN <str> (281) 40
TOK_THEN <str> (282) 41
TOK_MTEXT <str> (283) 38
TOK_CELL <str> (284) 45 46
TOK_COMMENT <str> (285)
TOK_IMPORT_NAME <str> (286) 25
":" (287) 16 30 31 32 33
"=" (288) 17 18 19 20 21 22 23 24
TOK_ROW_END (289) 44
TOK_ERROR (290)
TOK_OUT_OF_MEMORY (291)


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
document (38)
    on left: 1, on right: 0
declarations (39)
    on left: 2 3, on right: 1 3
declaration (40)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15, on right: 3
feature_declaration (41)
    on left: 16, on right: 4
grammar_declaration (42)
    on left: 17 18 19 20 21 22, on right: 5
case_declaration (43)
    on left: 23 24, on right: 6
import_declaration (44)
    on left: 25, on right: 7
file_skeleton_declaration (45)
    on left: 26, on right: 8
test_skeleton_declaration (46)
    on left: 27, on right: 9
step_skeleton_declaration (47)
    on left: 28, on right: 10
define_skeleton_declaration (48)
    on left: 29, on right: 11
background_declaration (49)
    on left: 30, on right: 12
scenario_outline_declaration (50)
    on left: 31, on right: 13
examples_declaration (51)
    on left: 32, on right: 14
scenario_declaration (52)
    on left: 33, on right: 15
steps <steps> (53)
    on left: 34 35, on right: 30 31 33 35
step <step> (54)
    on left: 36 37 38, on right: 34 35
basic_step <step> (55)
    on left: 39 40 41, on right: 36 37 38
table <rows> (56)
    on left: 42 43, on right: 32 37 43
row <cells> (57)
    on left: 44, on right: 42 43
cells <cells> (58)
    on left: 45 46, on right: 44 46


State 0

    0 $accept: . document "end-of-file"
    1 document: . declarations
    2 declarations: . %empty
    3             | . declarations declaration

    $default  reduce using rule 2 (declarations)

    document      go to state 1
    declarations  go to state 2


State 1

    0 $accept: document . "end-of-file"

    "end-of-file"  shift, and go to state 3


State 2

    1 document: declarations .  ["end-of-file"]
    3 declarations: declarations . declaration
    4 declaration: . feature_declaration
    5            | . grammar_declaration
    6            | . case_declaration
    7            | . import_declaration
    8            | . file_skeleton_declaration
    9            | . test_skeleton_declaration
   10            | . step_skeleton_declaration
   11            | . define_skeleton_declaration
   12            | . background_declaration
   13            | . scenario_outline_declaration
   14            | . examples_declaration
   15            | . scenario_declaration
   16 feature_declaration: . "Feature" ":" TOK_IDENTIFIER
   17 grammar_declaration: . "%grammar" "=" "ECMAScript"
   18                    | . "%grammar" "=" "basic"
   19                    | . "%grammar" "=" "extended"
   20                    | . "%grammar" "=" "awk"
   21                    | . "%grammar" "=" "grep"
   22                    | . "%grammar" "=" "egrep"
   23 case_declaration: . "%case" "=" "sensitive"
   24                 | . "%case" "=" "insensitive"
   25 import_declaration: . "%import" TOK_IMPORT_NAME
   26 file_skeleton_declaration: . "%file" TOK_CPP
   27 test_skeleton_declaration: . "%test" TOK_CPP
   28 step_skeleton_declaration: . TOK_PATTERN TOK_CPP
   29 define_skeleton_declaration: . "%define" TOK_IDENTIFIER TOK_CPP
   30 background_declaration: . "Background" ":" steps
   31 scenario_outline_declaration: . "Scenario" "Outline" ":" TOK_IDENTIFIER steps
   32 examples_declaration: . "Examples" ":" table
   33 scenario_declaration: . "Scenario" ":" TOK_IDENTIFIER steps

    "Feature"     shift, and go to state 4
    "%file"       shift, and go to state 5
    "%test"       shift, and go to state 6
    "%define"     shift, and go to state 7
    "Background"  shift, and go to state 8
    "Scenario"    shift, and go to state 9
    "Examples"    shift, and go to state 10
    "%grammar"    shift, and go to state 11
    "%case"       shift, and go to state 12
    "%import"     shift, and go to state 13
    TOK_PATTERN   shift, and go to state 14

    $default  reduce using rule 1 (document)

    declaration                   go to state 15
    feature_declaration           go to state 16
    grammar_declaration           go to state 17
    case_declaration              go to state 18
    import_declaration            go to state 19
    file_skeleton_declaration     go to state 20
    test_skeleton_declaration     go to state 21
    step_skeleton_declaration     go to state 22
    define_skeleton_declaration   go to state 23
    background_declaration        go to state 24
    scenario_outline_declaration  go to state 25
    examples_declaration          go to state 26
    scenario_declaration          go to state 27


State 3

    0 $accept: document "end-of-file" .

    $default  accept


State 4

   16 feature_declaration: "Feature" . ":" TOK_IDENTIFIER

    ":"  shift, and go to state 28


State 5

   26 file_skeleton_declaration: "%file" . TOK_CPP

    TOK_CPP  shift, and go to state 29


State 6

   27 test_skeleton_declaration: "%test" . TOK_CPP

    TOK_CPP  shift, and go to state 30


State 7

   29 define_skeleton_declaration: "%define" . TOK_IDENTIFIER TOK_CPP

    TOK_IDENTIFIER  shift, and go to state 31


State 8

   30 background_declaration: "Background" . ":" steps

    ":"  shift, and go to state 32


State 9

   31 scenario_outline_declaration: "Scenario" . "Outline" ":" TOK_IDENTIFIER steps
   33 scenario_declaration: "Scenario" . ":" TOK_IDENTIFIER steps

    "Outline"  shift, and go to state 33
    ":"        shift, and go to state 34


State 10

   32 examples_declaration: "Examples" . ":" table

    ":"  shift, and go to state 35


State 11

   17 grammar_declaration: "%grammar" . "=" "ECMAScript"
   18                    | "%grammar" . "=" "basic"
   19                    | "%grammar" . "=" "extended"
   20                    | "%grammar" . "=" "awk"
   21                    | "%grammar" . "=" "grep"
   22                    | "%grammar" . "=" "egrep"

    "="  shift, and go to state 36


State 12

   23 case_declaration: "%case" . "=" "sensitive"
   24                 | "%case" . "=" "insensitive"

    "="  shift, and go to state 37


State 13

   25 import_declaration: "%import" . TOK_IMPORT_NAME

    TOK_IMPORT_NAME  shift, and go to state 38


State 14

   28 step_skeleton_declaration: TOK_PATTERN . TOK_CPP

    TOK_CPP  shift, and go to state 39


State 15

    3 declarations: declarations declaration .

    $default  reduce using rule 3 (declarations)


State 16

    4 declaration: feature_declaration .

    $default  reduce using rule 4 (declaration)


State 17

    5 declaration: grammar_declaration .

    $default  reduce using rule 5 (declaration)


State 18

    6 declaration: case_declaration .

    $default  reduce using rule 6 (declaration)


State 19

    7 declaration: import_declaration .

    $default  reduce using rule 7 (declaration)


State 20

    8 declaration: file_skeleton_declaration .

    $default  reduce using rule 8 (declaration)


State 21

    9 declaration: test_skeleton_declaration .

    $default  reduce using rule 9 (declaration)


State 22

   10 declaration: step_skeleton_declaration .

    $default  reduce using rule 10 (declaration)


State 23

   11 declaration: define_skeleton_declaration .

    $default  reduce using rule 11 (declaration)


State 24

   12 declaration: background_declaration .

    $default  reduce using rule 12 (declaration)


State 25

   13 declaration: scenario_outline_declaration .

    $default  reduce using rule 13 (declaration)


State 26

   14 declaration: examples_declaration .

    $default  reduce using rule 14 (declaration)


State 27

   15 declaration: scenario_declaration .

    $default  reduce using rule 15 (declaration)


State 28

   16 feature_declaration: "Feature" ":" . TOK_IDENTIFIER

    TOK_IDENTIFIER  shift, and go to state 40


State 29

   26 file_skeleton_declaration: "%file" TOK_CPP .

    $default  reduce using rule 26 (file_skeleton_declaration)


State 30

   27 test_skeleton_declaration: "%test" TOK_CPP .

    $default  reduce using rule 27 (test_skeleton_declaration)


State 31

   29 define_skeleton_declaration: "%define" TOK_IDENTIFIER . TOK_CPP

    TOK_CPP  shift, and go to state 41


State 32

   30 background_declaration: "Background" ":" . steps
   34 steps: . step
   35      | . steps step
   36 step: . basic_step
   37     | . basic_step table
   38     | . basic_step TOK_MTEXT
   39 basic_step: . TOK_GIVEN
   40           | . TOK_WHEN
   41           | . TOK_THEN

    TOK_GIVEN  shift, and go to state 42
    TOK_WHEN   shift, and go to state 43
    TOK_THEN   shift, and go to state 44

    steps       go to state 45
    step        go to state 46
    basic_step  go to state 47


State 33

   31 scenario_outline_declaration: "Scenario" "Outline" . ":" TOK_IDENTIFIER steps

    ":"  shift, and go to state 48


State 34

   33 scenario_declaration: "Scenario" ":" . TOK_IDENTIFIER steps

    TOK_IDENTIFIER  shift, and go to state 49


State 35

   32 examples_declaration: "Examples" ":" . table
   42 table: . row
   43      | . table row
   44 row: . cells TOK_ROW_END
   45 cells: . TOK_CELL
   46      | . cells TOK_CELL

    TOK_CELL  shift, and go to state 50

    table  go to state 51
    row    go to state 52
    cells  go to state 53


State 36

   17 grammar_declaration: "%grammar" "=" . "ECMAScript"
   18                    | "%grammar" "=" . "basic"
   19                    | "%grammar" "=" . "extended"
   20                    | "%grammar" "=" . "awk"
   21                    | "%grammar" "=" . "grep"
   22                    | "%grammar" "=" . "egrep"

    "ECMAScript"  shift, and go to state 54
    "basic"       shift, and go to state 55
    "extended"    shift, and go to state 56
    "awk"         shift, and go to state 57
    "grep"        shift, and go to state 58
    "egrep"       shift, and go to state 59


State 37

   23 case_declaration: "%case" "=" . "sensitive"
   24                 | "%case" "=" . "insensitive"

    "sensitive"    shift, and go to state 60
    "insensitive"  shift, and go to state 61


State 38

   25 import_declaration: "%import" TOK_IMPORT_NAME .

    $default  reduce using rule 25 (import_declaration)


State 39

   28 step_skeleton_declaration: TOK_PATTERN TOK_CPP .

    $default  reduce using rule 28 (step_skeleton_declaration)


State 40

   16 feature_declaration: "Feature" ":" TOK_IDENTIFIER .

    $default  reduce using rule 16 (feature_declaration)


State 41

   29 define_skeleton_declaration: "%define" TOK_IDENTIFIER TOK_CPP .

    $default  reduce using rule 29 (define_skeleton_declaration)


State 42

   39 basic_step: TOK_GIVEN .

    $default  reduce using rule 39 (basic_step)


State 43

   40 basic_step: TOK_WHEN .

    $default  reduce using rule 40 (basic_step)


State 44

   41 basic_step: TOK_THEN .

    $default  reduce using rule 41 (basic_step)


State 45

   30 background_declaration: "Background" ":" steps .  ["end-of-file", "Feature", "%file", "%test", "%define", "Background", "Scenario", "Examples", "%grammar", "%case", "%import", TOK_PATTERN]
   35 steps: steps . step
   36 step: . basic_step
   37     | . basic_step table
   38     | . basic_step TOK_MTEXT
   39 basic_step: . TOK_GIVEN
   40           | . TOK_WHEN
   41           | . TOK_THEN

    TOK_GIVEN  shift, and go to state 42
    TOK_WHEN   shift, and go to state 43
    TOK_THEN   shift, and go to state 44

    $default  reduce using rule 30 (background_declaration)

    step        go to state 62
    basic_step  go to state 47


State 46

   34 steps: step .

    $default  reduce using rule 34 (steps)


State 47

   36 step: basic_step .  ["end-of-file", "Feature", "%file", "%test", "%define", "Background", "Scenario", "Examples", "%grammar", "%case", "%import", TOK_PATTERN, TOK_GIVEN, TOK_WHEN, TOK_THEN]
   37     | basic_step . table
   38     | basic_step . TOK_MTEXT
   42 table: . row
   43      | . table row
   44 row: . cells TOK_ROW_END
   45 cells: . TOK_CELL
   46      | . cells TOK_CELL

    TOK_MTEXT  shift, and go to state 63
    TOK_CELL   shift, and go to state 50

    $default  reduce using rule 36 (step)

    table  go to state 64
    row    go to state 52
    cells  go to state 53


State 48

   31 scenario_outline_declaration: "Scenario" "Outline" ":" . TOK_IDENTIFIER steps

    TOK_IDENTIFIER  shift, and go to state 65


State 49

   33 scenario_declaration: "Scenario" ":" TOK_IDENTIFIER . steps
   34 steps: . step
   35      | . steps step
   36 step: . basic_step
   37     | . basic_step table
   38     | . basic_step TOK_MTEXT
   39 basic_step: . TOK_GIVEN
   40           | . TOK_WHEN
   41           | . TOK_THEN

    TOK_GIVEN  shift, and go to state 42
    TOK_WHEN   shift, and go to state 43
    TOK_THEN   shift, and go to state 44

    steps       go to state 66
    step        go to state 46
    basic_step  go to state 47


State 50

   45 cells: TOK_CELL .

    $default  reduce using rule 45 (cells)


State 51

   32 examples_declaration: "Examples" ":" table .  ["end-of-file", "Feature", "%file", "%test", "%define", "Background", "Scenario", "Examples", "%grammar", "%case", "%import", TOK_PATTERN]
   43 table: table . row
   44 row: . cells TOK_ROW_END
   45 cells: . TOK_CELL
   46      | . cells TOK_CELL

    TOK_CELL  shift, and go to state 50

    $default  reduce using rule 32 (examples_declaration)

    row    go to state 67
    cells  go to state 53


State 52

   42 table: row .

    $default  reduce using rule 42 (table)


State 53

   44 row: cells . TOK_ROW_END
   46 cells: cells . TOK_CELL

    TOK_CELL     shift, and go to state 68
    TOK_ROW_END  shift, and go to state 69


State 54

   17 grammar_declaration: "%grammar" "=" "ECMAScript" .

    $default  reduce using rule 17 (grammar_declaration)


State 55

   18 grammar_declaration: "%grammar" "=" "basic" .

    $default  reduce using rule 18 (grammar_declaration)


State 56

   19 grammar_declaration: "%grammar" "=" "extended" .

    $default  reduce using rule 19 (grammar_declaration)


State 57

   20 grammar_declaration: "%grammar" "=" "awk" .

    $default  reduce using rule 20 (grammar_declaration)


State 58

   21 grammar_declaration: "%grammar" "=" "grep" .

    $default  reduce using rule 21 (grammar_declaration)


State 59

   22 grammar_declaration: "%grammar" "=" "egrep" .

    $default  reduce using rule 22 (grammar_declaration)


State 60

   23 case_declaration: "%case" "=" "sensitive" .

    $default  reduce using rule 23 (case_declaration)


State 61

   24 case_declaration: "%case" "=" "insensitive" .

    $default  reduce using rule 24 (case_declaration)


State 62

   35 steps: steps step .

    $default  reduce using rule 35 (steps)


State 63

   38 step: basic_step TOK_MTEXT .

    $default  reduce using rule 38 (step)


State 64

   37 step: basic_step table .  ["end-of-file", "Feature", "%file", "%test", "%define", "Background", "Scenario", "Examples", "%grammar", "%case", "%import", TOK_PATTERN, TOK_GIVEN, TOK_WHEN, TOK_THEN]
   43 table: table . row
   44 row: . cells TOK_ROW_END
   45 cells: . TOK_CELL
   46      | . cells TOK_CELL

    TOK_CELL  shift, and go to state 50

    $default  reduce using rule 37 (step)

    row    go to state 67
    cells  go to state 53


State 65

   31 scenario_outline_declaration: "Scenario" "Outline" ":" TOK_IDENTIFIER . steps
   34 steps: . step
   35      | . steps step
   36 step: . basic_step
   37     | . basic_step table
   38     | . basic_step TOK_MTEXT
   39 basic_step: . TOK_GIVEN
   40           | . TOK_WHEN
   41           | . TOK_THEN

    TOK_GIVEN  shift, and go to state 42
    TOK_WHEN   shift, and go to state 43
    TOK_THEN   shift, and go to state 44

    steps       go to state 70
    step        go to state 46
    basic_step  go to state 47


State 66

   33 scenario_declaration: "Scenario" ":" TOK_IDENTIFIER steps .  ["end-of-file", "Feature", "%file", "%test", "%define", "Background", "Scenario", "Examples", "%grammar", "%case", "%import", TOK_PATTERN]
   35 steps: steps . step
   36 step: . basic_step
   37     | . basic_step table
   38     | . basic_step TOK_MTEXT
   39 basic_step: . TOK_GIVEN
   40           | . TOK_WHEN
   41           | . TOK_THEN

    TOK_GIVEN  shift, and go to state 42
    TOK_WHEN   shift, and go to state 43
    TOK_THEN   shift, and go to state 44

    $default  reduce using rule 33 (scenario_declaration)

    step        go to state 62
    basic_step  go to state 47


State 67

   43 table: table row .

    $default  reduce using rule 43 (table)


State 68

   46 cells: cells TOK_CELL .

    $default  reduce using rule 46 (cells)


State 69

   44 row: cells TOK_ROW_END .

    $default  reduce using rule 44 (row)


State 70

   31 scenario_outline_declaration: "Scenario" "Outline" ":" TOK_IDENTIFIER steps .  ["end-of-file", "Feature", "%file", "%test", "%define", "Background", "Scenario", "Examples", "%grammar", "%case", "%import", TOK_PATTERN]
   35 steps: steps . step
   36 step: . basic_step
   37     | . basic_step table
   38     | . basic_step TOK_MTEXT
   39 basic_step: . TOK_GIVEN
   40           | . TOK_WHEN
   41           | . TOK_THEN

    TOK_GIVEN  shift, and go to state 42
    TOK_WHEN   shift, and go to state 43
    TOK_THEN   shift, and go to state 44

    $default  reduce using rule 31 (scenario_outline_declaration)

    step        go to state 62
    basic_step  go to state 47
